// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When suite exists Sanity - making sure everything works as it should 1`] = `
Object {
  Symbol(mock_vest_suites): Object {
    "suite_12": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_1": true,
            "field_3": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "0",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_12",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "1",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_12",
            "testFn": Promise {},
          },
        ],
        "name": "suite_12",
        "pending": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "3",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_12",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "4",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_12",
            "testFn": Promise {},
          },
        ],
        "skipped": Object {
          "field_1": true,
          "field_3": true,
        },
        "suiteId": "suite_12",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_2": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_2": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": null,
        "name": "suite_12",
        "pending": null,
        "skipped": Object {
          "field_2": true,
        },
        "suiteId": "suite_12",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
    ],
    "suite_8": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {},
        "fieldCallbacks": Object {},
        "lagging": Array [],
        "name": "suite_8",
        "pending": Array [],
        "skipped": Object {},
        "suiteId": "suite_8",
        "tests": Object {},
        "warnCount": 0,
      },
      undefined,
    ],
  },
  Symbol(mock_vest_canceled): Object {
    "2": true,
  },
}
`;

exports[`When suite exists Sanity - making sure everything works as it should 2`] = `
Object {
  Symbol(mock_vest_suites): Object {
    "suite_12": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_1": true,
            "field_3": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "0",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_12",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "1",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_12",
            "testFn": Promise {},
          },
        ],
        "name": "suite_12",
        "pending": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "3",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_12",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "4",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_12",
            "testFn": Promise {},
          },
        ],
        "skipped": Object {
          "field_1": true,
          "field_3": true,
        },
        "suiteId": "suite_12",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_2": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_2": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": null,
        "name": "suite_12",
        "pending": null,
        "skipped": Object {
          "field_2": true,
        },
        "suiteId": "suite_12",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
    ],
    "suite_28": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {},
        "fieldCallbacks": Object {},
        "lagging": Array [],
        "name": "suite_28",
        "pending": Array [],
        "skipped": Object {},
        "suiteId": "suite_28",
        "tests": Object {},
        "warnCount": 0,
      },
      undefined,
    ],
    "suite_32": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_1": true,
            "field_3": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "15",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_32",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "16",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_32",
            "testFn": Promise {},
          },
        ],
        "name": "suite_32",
        "pending": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "18",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_32",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "19",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_32",
            "testFn": Promise {},
          },
        ],
        "skipped": Object {
          "field_1": true,
          "field_3": true,
        },
        "suiteId": "suite_32",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_2": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_2": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": null,
        "name": "suite_32",
        "pending": null,
        "skipped": Object {
          "field_2": true,
        },
        "suiteId": "suite_32",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
    ],
    "suite_8": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {},
        "fieldCallbacks": Object {},
        "lagging": Array [],
        "name": "suite_8",
        "pending": Array [],
        "skipped": Object {},
        "suiteId": "suite_8",
        "tests": Object {},
        "warnCount": 0,
      },
      undefined,
    ],
  },
  Symbol(mock_vest_canceled): Object {
    "10": true,
    "11": true,
    "12": true,
    "13": true,
    "14": true,
    "17": true,
    "2": true,
    "5": true,
    "6": true,
    "7": true,
    "8": true,
    "9": true,
  },
}
`;

exports[`When suite exists Sanity - making sure everything works as it should 3`] = `
Object {
  Symbol(mock_vest_suites): Object {
    "suite_12": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_1": true,
            "field_3": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "0",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_12",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "1",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_12",
            "testFn": Promise {},
          },
        ],
        "name": "suite_12",
        "pending": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "3",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_12",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "4",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_12",
            "testFn": Promise {},
          },
        ],
        "skipped": Object {
          "field_1": true,
          "field_3": true,
        },
        "suiteId": "suite_12",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_2": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_2": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": null,
        "name": "suite_12",
        "pending": null,
        "skipped": Object {
          "field_2": true,
        },
        "suiteId": "suite_12",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
    ],
    "suite_28": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {},
        "fieldCallbacks": Object {},
        "lagging": Array [],
        "name": "suite_28",
        "pending": Array [],
        "skipped": Object {},
        "suiteId": "suite_28",
        "tests": Object {},
        "warnCount": 0,
      },
      undefined,
    ],
    "suite_32": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_1": true,
            "field_3": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "15",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_32",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "16",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_32",
            "testFn": Promise {},
          },
        ],
        "name": "suite_32",
        "pending": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "18",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_32",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "19",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_32",
            "testFn": Promise {},
          },
        ],
        "skipped": Object {
          "field_1": true,
          "field_3": true,
        },
        "suiteId": "suite_32",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_2": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_2": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": null,
        "name": "suite_32",
        "pending": null,
        "skipped": Object {
          "field_2": true,
        },
        "suiteId": "suite_32",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
    ],
    "suite_48": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {},
        "fieldCallbacks": Object {},
        "lagging": Array [],
        "name": "suite_48",
        "pending": Array [],
        "skipped": Object {},
        "suiteId": "suite_48",
        "tests": Object {},
        "warnCount": 0,
      },
      undefined,
    ],
    "suite_52": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_1": true,
            "field_3": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "30",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_52",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "31",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_52",
            "testFn": Promise {},
          },
        ],
        "name": "suite_52",
        "pending": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "33",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_52",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "34",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_52",
            "testFn": Promise {},
          },
        ],
        "skipped": Object {
          "field_1": true,
          "field_3": true,
        },
        "suiteId": "suite_52",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_2": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_2": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": null,
        "name": "suite_52",
        "pending": null,
        "skipped": Object {
          "field_2": true,
        },
        "suiteId": "suite_52",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
    ],
    "suite_8": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {},
        "fieldCallbacks": Object {},
        "lagging": Array [],
        "name": "suite_8",
        "pending": Array [],
        "skipped": Object {},
        "suiteId": "suite_8",
        "tests": Object {},
        "warnCount": 0,
      },
      undefined,
    ],
  },
  Symbol(mock_vest_canceled): Object {
    "10": true,
    "11": true,
    "12": true,
    "13": true,
    "14": true,
    "17": true,
    "2": true,
    "20": true,
    "21": true,
    "22": true,
    "23": true,
    "24": true,
    "25": true,
    "26": true,
    "27": true,
    "28": true,
    "29": true,
    "32": true,
    "5": true,
    "6": true,
    "7": true,
    "8": true,
    "9": true,
  },
}
`;

exports[`When suite exists Sanity - making sure everything works as it should 4`] = `
Object {
  Symbol(mock_vest_suites): Object {
    "suite_12": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_1": true,
            "field_3": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "0",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_12",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "1",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_12",
            "testFn": Promise {},
          },
        ],
        "name": "suite_12",
        "pending": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "3",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_12",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "4",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_12",
            "testFn": Promise {},
          },
        ],
        "skipped": Object {
          "field_1": true,
          "field_3": true,
        },
        "suiteId": "suite_12",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_2": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_2": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": null,
        "name": "suite_12",
        "pending": null,
        "skipped": Object {
          "field_2": true,
        },
        "suiteId": "suite_12",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
    ],
    "suite_28": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {},
        "fieldCallbacks": Object {},
        "lagging": Array [],
        "name": "suite_28",
        "pending": Array [],
        "skipped": Object {},
        "suiteId": "suite_28",
        "tests": Object {},
        "warnCount": 0,
      },
      undefined,
    ],
    "suite_32": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_1": true,
            "field_3": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "15",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_32",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "16",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_32",
            "testFn": Promise {},
          },
        ],
        "name": "suite_32",
        "pending": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "18",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_32",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "19",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_32",
            "testFn": Promise {},
          },
        ],
        "skipped": Object {
          "field_1": true,
          "field_3": true,
        },
        "suiteId": "suite_32",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_2": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_2": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": null,
        "name": "suite_32",
        "pending": null,
        "skipped": Object {
          "field_2": true,
        },
        "suiteId": "suite_32",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
    ],
    "suite_48": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {},
        "fieldCallbacks": Object {},
        "lagging": Array [],
        "name": "suite_48",
        "pending": Array [],
        "skipped": Object {},
        "suiteId": "suite_48",
        "tests": Object {},
        "warnCount": 0,
      },
      undefined,
    ],
    "suite_52": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_1": true,
            "field_3": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "30",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_52",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "31",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_52",
            "testFn": Promise {},
          },
        ],
        "name": "suite_52",
        "pending": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "33",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_52",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "34",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_52",
            "testFn": Promise {},
          },
        ],
        "skipped": Object {
          "field_1": true,
          "field_3": true,
        },
        "suiteId": "suite_52",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_2": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_2": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": null,
        "name": "suite_52",
        "pending": null,
        "skipped": Object {
          "field_2": true,
        },
        "suiteId": "suite_52",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
    ],
    "suite_68": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {},
        "fieldCallbacks": Object {},
        "lagging": Array [],
        "name": "suite_68",
        "pending": Array [],
        "skipped": Object {},
        "suiteId": "suite_68",
        "tests": Object {},
        "warnCount": 0,
      },
      undefined,
    ],
    "suite_72": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_1": true,
            "field_3": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_1",
            "id": "45",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_72",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_3",
            "id": "46",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_72",
            "testFn": Promise {},
          },
        ],
        "name": "suite_72",
        "pending": Array [
          VestTest {
            "failed": false,
            "fieldName": "field_2",
            "id": "48",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_72",
            "testFn": Promise {},
          },
          VestTest {
            "failed": false,
            "fieldName": "field_4",
            "id": "49",
            "isWarning": false,
            "statement": undefined,
            "suiteId": "suite_72",
            "testFn": Promise {},
          },
        ],
        "skipped": Object {
          "field_1": true,
          "field_3": true,
        },
        "suiteId": "suite_72",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_2": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {
          "skip": Object {
            "field_2": true,
          },
        },
        "fieldCallbacks": Object {},
        "lagging": null,
        "name": "suite_72",
        "pending": null,
        "skipped": Object {
          "field_2": true,
        },
        "suiteId": "suite_72",
        "tests": Object {
          "field_1": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_3": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
          "field_4": Object {
            "errorCount": 0,
            "warnCount": 0,
          },
        },
        "warnCount": 0,
      },
    ],
    "suite_8": Array [
      Object {
        "doneCallbacks": Array [],
        "errorCount": 0,
        "exclusive": Object {},
        "fieldCallbacks": Object {},
        "lagging": Array [],
        "name": "suite_8",
        "pending": Array [],
        "skipped": Object {},
        "suiteId": "suite_8",
        "tests": Object {},
        "warnCount": 0,
      },
      undefined,
    ],
  },
  Symbol(mock_vest_canceled): Object {
    "10": true,
    "11": true,
    "12": true,
    "13": true,
    "14": true,
    "17": true,
    "2": true,
    "20": true,
    "21": true,
    "22": true,
    "23": true,
    "24": true,
    "25": true,
    "26": true,
    "27": true,
    "28": true,
    "29": true,
    "32": true,
    "35": true,
    "36": true,
    "37": true,
    "38": true,
    "39": true,
    "40": true,
    "41": true,
    "42": true,
    "43": true,
    "44": true,
    "47": true,
    "5": true,
    "6": true,
    "7": true,
    "8": true,
    "9": true,
  },
}
`;
